fixed hovering background to only change the img wrap

--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -9,7 +9,7 @@
   width: 250px
 }
 
-.project-card :hover {
+.project-card:hover .project-card-img-wrap {
     background-color: bisque;
     cursor: pointer;
 }
